ImgLang.g4
grammar ImgLang;
imgBlock: 'image' ID ':' '\n' block;
block: back_block ('\n' layer_block)* ('\n' trans_block)?;
back_block: 'background' ':' '\n' back_param;
back_param: width_sub '\n' height_sub ('\n' color_sub)? ('\n' opacity_sub)?;
width_sub: 'width' ':' NUMBER;
height_sub: 'height' ':' NUMBER;
layer_block: 'layer' ID ':' '\n' layer_param ('\n' shapes_block)?;
layer_param: width_sub '\n' height_sub '\n' position_sub '\n' priority_sub;
trans_block: 'transformations' ':' trans_param;
trans_param: ('\n' rotate_sub)? ('\n' scale_sub)?;
rotate_sub: 'rotate' ':' (NUMBER_WS | NUMBER);
scale_sub: 'scale' ':' DOUBLE;
color_sub: 'color' ':' rgb_val;
opacity_sub: 'opacity' ':' DOUBLE;
rgb_val: 'rgb' '(' NUMBER ',' NUMBER ',' NUMBER ')';
shapes_block: 'shapes' ':' (shape_block)+;
shape_block: ('\n' rect_block | '\n' circ_block | '\n' poly_block);
position_sub: 'position' ':' position_val;
position_val: '(' NUMBER ',' NUMBER ')';
priority_sub: 'priority' ':' NUMBER;
rect_block: 'rectangle' ID ':' '\n' rect_param;
circ_block: 'circle' ID ':' '\n' circ_param;
poly_block: 'polygon' ID ':' '\n' poly_param;
rect_param: width_sub '\n' height_sub '\n' position_sub '\n' priority_sub ('\n' color_sub)? ('\n' opacity_sub);
circ_param: radius_sub '\n' position_sub '\n' priority_sub ('\n' color_sub)? ('\n' opacity_sub);
poly_param: vertex_sub '\n' position_sub '\n' priority_sub ('\n' color_sub)? ('\n' opacity_sub);
radius_sub: 'radius' ':' NUMBER;
vertex_sub: 'vertexes' ':' vertex_list;
vertex_list: '[' position_val (',' position_val)* ']';
NUMBER: [0-9]+;
NUMBER_WS: ('-')* NUMBER;
DOUBLE: [0-9]+ '.' [0-9]*;
WS: [ \t\r]+ -> skip;
ID: LETTER (LETTER | NUMBER | '_')*;
LETTER: ('a'..'z' | 'A'..'Z');
