gen/ImgLangParser.java
// Generated from C:/Users/jbtok/Desktop/studia_szkola/studia/semestr5/MiAK/imgLang\ImgLang.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ImgLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, NUMBER=27, NUMBER_WS=28, DOUBLE=29, WS=30, ID=31, 
		LETTER=32;
	public static final int
		RULE_imgBlock = 0, RULE_block = 1, RULE_back_block = 2, RULE_back_param = 3, 
		RULE_width_sub = 4, RULE_height_sub = 5, RULE_layer_block = 6, RULE_layer_param = 7, 
		RULE_trans_block = 8, RULE_trans_param = 9, RULE_rotate_sub = 10, RULE_scale_sub = 11, 
		RULE_color_sub = 12, RULE_opacity_sub = 13, RULE_rgb_val = 14, RULE_shapes_block = 15, 
		RULE_shape_block = 16, RULE_position_sub = 17, RULE_position_val = 18, 
		RULE_priority_sub = 19, RULE_rect_block = 20, RULE_circ_block = 21, RULE_poly_block = 22, 
		RULE_rect_param = 23, RULE_circ_param = 24, RULE_poly_param = 25, RULE_radius_sub = 26, 
		RULE_vertex_sub = 27, RULE_vertex_list = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"imgBlock", "block", "back_block", "back_param", "width_sub", "height_sub", 
			"layer_block", "layer_param", "trans_block", "trans_param", "rotate_sub", 
			"scale_sub", "color_sub", "opacity_sub", "rgb_val", "shapes_block", "shape_block", 
			"position_sub", "position_val", "priority_sub", "rect_block", "circ_block", 
			"poly_block", "rect_param", "circ_param", "poly_param", "radius_sub", 
			"vertex_sub", "vertex_list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'image'", "':'", "'\n'", "'background'", "'width'", "'height'", 
			"'layer'", "'transformations'", "'rotate'", "'scale'", "'color'", "'opacity'", 
			"'rgb'", "'('", "','", "')'", "'shapes'", "'position'", "'priority'", 
			"'rectangle'", "'circle'", "'polygon'", "'radius'", "'vertexes'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "NUMBER", "NUMBER_WS", "DOUBLE", "WS", "ID", "LETTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ImgLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ImgLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ImgBlockContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ImgLangParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ImgBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imgBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterImgBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitImgBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitImgBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImgBlockContext imgBlock() throws RecognitionException {
		ImgBlockContext _localctx = new ImgBlockContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_imgBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(T__0);
			setState(59);
			match(ID);
			setState(60);
			match(T__1);
			setState(61);
			match(T__2);
			setState(62);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Back_blockContext back_block() {
			return getRuleContext(Back_blockContext.class,0);
		}
		public List<Layer_blockContext> layer_block() {
			return getRuleContexts(Layer_blockContext.class);
		}
		public Layer_blockContext layer_block(int i) {
			return getRuleContext(Layer_blockContext.class,i);
		}
		public Trans_blockContext trans_block() {
			return getRuleContext(Trans_blockContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			back_block();
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(65);
					match(T__2);
					setState(66);
					layer_block();
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(72);
				match(T__2);
				setState(73);
				trans_block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Back_blockContext extends ParserRuleContext {
		public Back_paramContext back_param() {
			return getRuleContext(Back_paramContext.class,0);
		}
		public Back_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_back_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterBack_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitBack_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitBack_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Back_blockContext back_block() throws RecognitionException {
		Back_blockContext _localctx = new Back_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_back_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__3);
			setState(77);
			match(T__1);
			setState(78);
			match(T__2);
			setState(79);
			back_param();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Back_paramContext extends ParserRuleContext {
		public Width_subContext width_sub() {
			return getRuleContext(Width_subContext.class,0);
		}
		public Height_subContext height_sub() {
			return getRuleContext(Height_subContext.class,0);
		}
		public Color_subContext color_sub() {
			return getRuleContext(Color_subContext.class,0);
		}
		public Opacity_subContext opacity_sub() {
			return getRuleContext(Opacity_subContext.class,0);
		}
		public Back_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_back_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterBack_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitBack_param(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitBack_param(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Back_paramContext back_param() throws RecognitionException {
		Back_paramContext _localctx = new Back_paramContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_back_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			width_sub();
			setState(82);
			match(T__2);
			setState(83);
			height_sub();
			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(84);
				match(T__2);
				setState(85);
				color_sub();
				}
				break;
			}
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(88);
				match(T__2);
				setState(89);
				opacity_sub();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Width_subContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(ImgLangParser.NUMBER, 0); }
		public Width_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_width_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterWidth_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitWidth_sub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitWidth_sub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Width_subContext width_sub() throws RecognitionException {
		Width_subContext _localctx = new Width_subContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_width_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(T__4);
			setState(93);
			match(T__1);
			setState(94);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Height_subContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(ImgLangParser.NUMBER, 0); }
		public Height_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_height_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterHeight_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitHeight_sub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitHeight_sub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Height_subContext height_sub() throws RecognitionException {
		Height_subContext _localctx = new Height_subContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_height_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(T__5);
			setState(97);
			match(T__1);
			setState(98);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Layer_blockContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ImgLangParser.ID, 0); }
		public Layer_paramContext layer_param() {
			return getRuleContext(Layer_paramContext.class,0);
		}
		public Shapes_blockContext shapes_block() {
			return getRuleContext(Shapes_blockContext.class,0);
		}
		public Layer_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layer_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterLayer_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitLayer_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitLayer_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Layer_blockContext layer_block() throws RecognitionException {
		Layer_blockContext _localctx = new Layer_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_layer_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__6);
			setState(101);
			match(ID);
			setState(102);
			match(T__1);
			setState(103);
			match(T__2);
			setState(104);
			layer_param();
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(105);
				match(T__2);
				setState(106);
				shapes_block();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Layer_paramContext extends ParserRuleContext {
		public Width_subContext width_sub() {
			return getRuleContext(Width_subContext.class,0);
		}
		public Height_subContext height_sub() {
			return getRuleContext(Height_subContext.class,0);
		}
		public Position_subContext position_sub() {
			return getRuleContext(Position_subContext.class,0);
		}
		public Priority_subContext priority_sub() {
			return getRuleContext(Priority_subContext.class,0);
		}
		public Layer_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_layer_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterLayer_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitLayer_param(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitLayer_param(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Layer_paramContext layer_param() throws RecognitionException {
		Layer_paramContext _localctx = new Layer_paramContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_layer_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			width_sub();
			setState(110);
			match(T__2);
			setState(111);
			height_sub();
			setState(112);
			match(T__2);
			setState(113);
			position_sub();
			setState(114);
			match(T__2);
			setState(115);
			priority_sub();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trans_blockContext extends ParserRuleContext {
		public Trans_paramContext trans_param() {
			return getRuleContext(Trans_paramContext.class,0);
		}
		public Trans_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trans_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterTrans_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitTrans_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitTrans_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Trans_blockContext trans_block() throws RecognitionException {
		Trans_blockContext _localctx = new Trans_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_trans_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(T__7);
			setState(118);
			match(T__1);
			setState(119);
			trans_param();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trans_paramContext extends ParserRuleContext {
		public Rotate_subContext rotate_sub() {
			return getRuleContext(Rotate_subContext.class,0);
		}
		public Scale_subContext scale_sub() {
			return getRuleContext(Scale_subContext.class,0);
		}
		public Trans_paramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trans_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterTrans_param(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitTrans_param(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitTrans_param(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Trans_paramContext trans_param() throws RecognitionException {
		Trans_paramContext _localctx = new Trans_paramContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_trans_param);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(121);
				match(T__2);
				setState(122);
				rotate_sub();
				}
				break;
			}
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(125);
				match(T__2);
				setState(126);
				scale_sub();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rotate_subContext extends ParserRuleContext {
		public TerminalNode NUMBER_WS() { return getToken(ImgLangParser.NUMBER_WS, 0); }
		public TerminalNode NUMBER() { return getToken(ImgLangParser.NUMBER, 0); }
		public Rotate_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rotate_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterRotate_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitRotate_sub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitRotate_sub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rotate_subContext rotate_sub() throws RecognitionException {
		Rotate_subContext _localctx = new Rotate_subContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_rotate_sub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(T__8);
			setState(130);
			match(T__1);
			setState(131);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==NUMBER_WS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Scale_subContext extends ParserRuleContext {
		public TerminalNode DOUBLE() { return getToken(ImgLangParser.DOUBLE, 0); }
		public Scale_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scale_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterScale_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitScale_sub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitScale_sub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Scale_subContext scale_sub() throws RecognitionException {
		Scale_subContext _localctx = new Scale_subContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_scale_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(T__9);
			setState(134);
			match(T__1);
			setState(135);
			match(DOUBLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Color_subContext extends ParserRuleContext {
		public Rgb_valContext rgb_val() {
			return getRuleContext(Rgb_valContext.class,0);
		}
		public Color_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_color_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterColor_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitColor_sub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitColor_sub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Color_subContext color_sub() throws RecognitionException {
		Color_subContext _localctx = new Color_subContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_color_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(T__10);
			setState(138);
			match(T__1);
			setState(139);
			rgb_val();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Opacity_subContext extends ParserRuleContext {
		public TerminalNode DOUBLE() { return getToken(ImgLangParser.DOUBLE, 0); }
		public Opacity_subContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opacity_sub; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterOpacity_sub(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitOpacity_sub(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitOpacity_sub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Opacity_subContext opacity_sub() throws RecognitionException {
		Opacity_subContext _localctx = new Opacity_subContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_opacity_sub);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(T__11);
			setState(142);
			match(T__1);
			setState(143);
			match(DOUBLE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rgb_valContext extends ParserRuleContext {
		public List<TerminalNode> NUMBER() { return getTokens(ImgLangParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(ImgLangParser.NUMBER, i);
		}
		public Rgb_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rgb_val; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterRgb_val(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitRgb_val(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitRgb_val(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Rgb_valContext rgb_val() throws RecognitionException {
		Rgb_valContext _localctx = new Rgb_valContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_rgb_val);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			match(T__12);
			setState(146);
			match(T__13);
			setState(147);
			match(NUMBER);
			setState(148);
			match(T__14);
			setState(149);
			match(NUMBER);
			setState(150);
			match(T__14);
			setState(151);
			match(NUMBER);
			setState(152);
			match(T__15);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Shapes_blockContext extends ParserRuleContext {
		public List<Shape_blockContext> shape_block() {
			return getRuleContexts(Shape_blockContext.class);
		}
		public Shape_blockContext shape_block(int i) {
			return getRuleContext(Shape_blockContext.class,i);
		}
		public Shapes_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_shapes_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).enterShapes_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ImgLangListener ) ((ImgLangListener)listener).exitShapes_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ImgLangVisitor ) return ((ImgLangVisitor<? extends T>)visitor).visitShapes_block(this);
			else return visitor.visitChildren(this);
		}
	}
